fix metric unit size on mobile

--- a/client/src/dashboard/styles/widgets/_sparkline.scss
+++ b/client/src/dashboard/styles/widgets/_sparkline.scss
@@ -35,6 +35,11 @@
   .metric-unit {
     font-weight: 600;
     font-size: 2rem;
+
+    @media (max-width: $screen-md) {
+      font-size: 1rem;
+      font-weight: 300;
+    }
   }
 
   .metric-meta {
